--- a/data_entry/templates/meridian_passage_entry.html
+++ b/data_entry/templates/meridian_passage_entry.html
@@ -11,7 +11,7 @@
             <input type="submit" value="Enter">
         </form>
 
-        <p>Return to <a href="">Main Menu</a></p>
+        <p>Return to <a href="/">Main Menu</a></p>
     
     </body>
 </html>
