changed HTML to reflect new URLS

--- a/data_entry/templates/latitude.html
+++ b/data_entry/templates/latitude.html
@@ -17,7 +17,7 @@
         </form>
 
 
-        <p>Return to <a href="/main">Main Menu</a></p>
+        <p>Return to <a href="/">Main Menu</a></p>
 
     </body>
 </html>
