--- a/data_entry/templates/latitude_result.html
+++ b/data_entry/templates/latitude_result.html
@@ -8,7 +8,7 @@
         
         <p>Latitude:                        {{latitude}}</p>
        
-        <p>Return to <a href="/main">Main Menu</a></p>
+        <p>Return to <a href="/">Main Menu</a></p>
 
     </body>
 </html>
