--- a/data_entry/templates/sight_result.html
+++ b/data_entry/templates/sight_result.html
@@ -9,7 +9,7 @@
         <p>Time of sight (UTC):                       {{sight_utc|date:"Y-m-d"}} {{sight_utc|time:"H:i:s"}}</p>
         <p>Sunset :                        {{sunset}}</p>
        
-        <p>Return to <a href="/main">Main Menu</a></p>
+        <p>Return to <a href="/">Main Menu</a></p>
 
     </body>
 </html>
