--- a/data_entry/templates/sunrise_sunset_result.html
+++ b/data_entry/templates/sunrise_sunset_result.html
@@ -9,7 +9,7 @@
         <p>Sunrise:                        {{sunrise}}</p>
         <p>Sunset :                        {{sunset}}</p>
        
-        <p>Return to <a href="/main">Main Menu</a></p>
+        <p>Return to <a href="/">Main Menu</a></p>
 
     </body>
 </html>
