plot coded and nav warning added

--- a/data_entry/templates/sight_result.html
+++ b/data_entry/templates/sight_result.html
@@ -3,11 +3,12 @@
     <body>
 
         <h1>Sight Result Page</h1>
-        <p>This is where we display the sight result</p>
 
         
-        <p>Time of sight (UTC):                       {{sight_utc|date:"Y-m-d"}} {{sight_utc|time:"H:i:s"}}</p>
-        <p>Sunset :                        {{sunset}}</p>
+        <p>Time of sight (UTC)  :   {{sight_utc|date:"Y-m-d"}} {{sight_utc|time:"H:i:s"}}</p>
+        <p>DR Latitude          :   {{sight_drlatitude}}
+        <p>DR Longitude         :   {{sight_drlongitude}}</p>
+        <p>Plot                 :   {{sight_plot}}</p>
        
         <p>Return to <a href="/">Main Menu</a></p>
 
