html/css modification

--- a/data_entry/templates/main.html
+++ b/data_entry/templates/main.html
@@ -17,8 +17,10 @@
 
     <ul class="main">
         <li><a href="/meridian_passage_entry">Meridian Passage / Latitude</a></li>
-        <li><a href="/sunrise_sunset_entry">Sunrise and Sunset</a></li>
         <li><a href="/sight_entry">Sight Reduction by Direct Computation</a></li>
+        <li><a href="/sunrise_sunset_entry">Sunrise and Sunset</a></li>
+        <li><a href="#">Star Finder Setup</a></li>
+        
     </ul>
 
     <footer class="footer">
