--- a/data_entry/static/data_entry/main.css
+++ b/data_entry/static/data_entry/main.css
@@ -6,21 +6,24 @@ h1 {
     width: 400px;
     text-align: center;
     color:black;
-    padding-left: 1px;
+    border-radius: 10px;
+    padding: 20px;
+    background-color: whitesmoke;
 }
 
  
 h2 {
-    width: 200px;
+    width: 400px;
     text-align: center;
     font-size: small;
     color: blue;
+    background-color: whitesmoke;
     padding-left: 1px;
 } 
 
 .main{
     list-style: none;
-    border: 1px solid #ddd;
+    border: 1px solid whitesmoke;
     padding: 20px;
     background-color: rgb(0, 55, 255);
     border-radius: 10px;
@@ -53,6 +56,6 @@ h2 {
     border-radius: 10px;
     text-align: center;
     padding: 20px;
-    background-color: black;
-    color: white;
+    background-color: whitesmoke;
+    color: black;
 }
