--- a/data_entry/templates/meridian_passage_entry.html
+++ b/data_entry/templates/meridian_passage_entry.html
@@ -1,9 +1,19 @@
+{% load static %}
+
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE-edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="{% static 'data_entry/entry.css' %}">
+    <title>Meridian Passage Entry</title>    
+</head>
+
+
     <body>
 
-        <h1>Meridian Passage Entry Page</h1>
-        <p>This will be where the meridian passage data will be entered</p>
+        <h1>Meridian Passage Entry</h1>
 
         <form action="" method="POST">
             {% csrf_token %}
