All entry pages now include css and footer added

--- a/data_entry/templates/sunrise_sunset_entry.html
+++ b/data_entry/templates/sunrise_sunset_entry.html
@@ -1,17 +1,30 @@
+{% load static %}
+
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE-edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="{% static 'data_entry/entry.css' %}">
+    <title>Sunrise Sunset Entry</title>    
+</head>
+
     <body>
 
-        <h1>Sunrise Sunset Entry Page</h1>
-        <p>This will be where the sunrise and sunset calculation inputs will be entered</p>
+        <h1>Sunrise Sunset Entry</h1>
+        
+        <ul class="main">
+            <form action="" method="POST">
+                {% csrf_token %}
+                {{form.as_p}}
+                <input type="submit" value="Enter">
+            </form>
+        </ul>
 
-        <form action="" method="POST">
-            {% csrf_token %}
-            {{form.as_p}}
-            <input type="submit" value="Enter">
-        </form>
-
-        <p>Return to <a href="/">Main Menu</a></p>
+        <footer class="footer">
+            <p>Return to <a href="/">Main Menu</a></p>
+        </footer>
     
     </body>
 </html>
