--- a/data_entry/templates/latitude.html
+++ b/data_entry/templates/latitude.html
@@ -1,23 +1,35 @@
+{% load static %}
+
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE-edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="{% static 'data_entry/entry.css' %}">
+    <title>Latitude Entry</title>    
+</head>
+
     <body>
 
-        <h1>Latitude Page</h1>
-        <p>This is where we get the required inputs to calculate latitude</p>
+        <h1>Latitude Entry</h1>
 
         <p>Time of meridian passage, Local: {{time_of_passage_local|date:"Y-m-d"}} {{time_of_passage_local|time:"H:i:s"}}</p>
         <p>Time of meridian passage, UTC:   {{time_of_passage_utc|date:"Y-m-d"}} {{time_of_passage_utc|time:"H:i:s"}}</p>
         <p>Celestial Body:                  {{celestial_body}}</p>
         <p>Limb:                            {{limb}}</p>
             
-        <form action="" method="POST">
-            {% csrf_token %}
-            {{form.as_p}}
-            <input type="submit" value="Enter">
-        </form>
+        <ul class="main">
+            <form action="" method="POST">
+                {% csrf_token %}
+                {{form.as_p}}
+                <input type="submit" value="Enter">
+            </form>
+        </ul>
 
-
-        <p>Return to <a href="/">Main Menu</a></p>
+        <footer class="footer">
+            <p>Return to <a href="/">Main Menu</a></p>
+        </footer>
 
     </body>
 </html>
