--- a/data_entry/templates/sight_entry.html
+++ b/data_entry/templates/sight_entry.html
@@ -1,17 +1,31 @@
+{% load static %}
+
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE-edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="{% static 'data_entry/entry.css' %}">
+    <title>Sight Entry</title>    
+</head>
+
+
     <body>
 
-        <h1>Sight Entry Page</h1>
-        <p>Enter inputs to Sight Reduction Calculation by direct computation</p>
-         
-        <form action="" method="POST">
-            {% csrf_token %}
-            {{form.as_p}}
-            <input type="submit" value="Enter">
-        </form>
+        <h1>Sight Entry</h1>
+        
+        <ul class="main">
+            <form action="" method="POST">
+                {% csrf_token %}
+                {{form.as_p}}
+                <input type="submit" value="Enter">
+            </form>
+        </ul>
 
-        <p>Return to <a href="/">Main Menu</a></p>
+        <footer class="footer">
+            <p>Return to <a href="/">Main Menu</a></p>
+        </footer>
     
     </body>
 </html>
