Added Star Finder

--- a/data_entry/templates/main.html
+++ b/data_entry/templates/main.html
@@ -20,7 +20,7 @@
         <li><a href="/meridian_passage_entry">Meridian Passage / Latitude</a></li>
         <li><a href="/sight_entry">Sight Reduction by Direct Computation</a></li>
         <li><a href="/sunrise_sunset_entry">Sunrise and Sunset</a></li>
-        <li><a href="#">Star Finder Setup</a></li>
+        <li><a href="/star_finder_time_entry">Star Finder Setup</a></li>
     </ul>
 
     <footer class="footer">
