Bug fixes, Star Finder

--- a/data_entry/templates/star_finder_lha_aries_result.html
+++ b/data_entry/templates/star_finder_lha_aries_result.html
@@ -7,7 +7,7 @@
         
         <p>Time of sight (UTC)  :   {{star_finder_utc|date:"Y-m-d"}} {{star_finder_utc|time:"H:i:s"}}</p>
         <p>DR Longitude         :   {{star_finder_drlongitude}}</p>
-        <p>Set LHA Aries        :   {{star_finder_lha_aries_plot}}</p>
+        <p>Set LHA Aries        :   {{star_finder_lha_aries}}</p>
        
         <p>Return to <a href="/">Main Menu</a></p>
 
