--- a/data_entry/templates/sight_result.html
+++ b/data_entry/templates/sight_result.html
@@ -1,16 +1,28 @@
+{% load static %}
+
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE-edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="{% static 'data_entry/result.css' %}">
+    <title>Sight Plot</title>    
+</head>
+
     <body>
 
-        <h1>Sight Result Page</h1>
+        <h1>Sight Plot</h1>
 
-        
         <p>Time of sight (UTC)  :   {{sight_utc|date:"Y-m-d"}} {{sight_utc|time:"H:i:s"}}</p>
         <p>DR Latitude          :   {{sight_drlatitude}}
         <p>DR Longitude         :   {{sight_drlongitude}}</p>
         <p>Plot                 :   {{sight_plot}}</p>
-       
-        <p>Return to <a href="/">Main Menu</a></p>
+
+
+        <footer class="footer">
+            <p>Return to <a href="/">Main Menu</a></p>
+        </footer>
 
     </body>
 </html>
