--- a/data_entry/templates/latitude_result.html
+++ b/data_entry/templates/latitude_result.html
@@ -1,14 +1,25 @@
+{% load static %}
+
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE-edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="{% static 'data_entry/result.css' %}">
+    <title>Latitude Result</title>    
+</head>
+
     <body>
 
-        <h1>Latitude Result Page</h1>
-        <p>This is where we display the calculated latitude</p>
+        <h1>Latitude</h1>
 
-        
-        <p>Latitude:                        {{latitude}}</p>
-       
-        <p>Return to <a href="/">Main Menu</a></p>
+        <h2>Latitude:          {{latitude}}</h2>
+
+
+        <footer class="footer">
+            <p>Return to <a href="/">Main Menu</a></p>
+        </footer>
 
     </body>
 </html>
