--- a/data_entry/templates/star_finder_lha_aries_result.html
+++ b/data_entry/templates/star_finder_lha_aries_result.html
@@ -1,15 +1,30 @@
+{% load static %}
+
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE-edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="{% static 'data_entry/result.css' %}">
+    <title>Star Finder Setup</title>    
+</head>
+
     <body>
 
-        <h1>Star Finder LHA Aries</h1>
+        <h1>Star Finder set LHA Aries</h1>
 
         
         <p>Time of sight (UTC)  :   {{star_finder_utc|date:"Y-m-d"}} {{star_finder_utc|time:"H:i:s"}}</p>
         <p>DR Longitude         :   {{star_finder_drlongitude}}</p>
+
+
         <p>Set LHA Aries        :   {{star_finder_lha_aries}}</p>
        
-        <p>Return to <a href="/">Main Menu</a></p>
+
+        <footer class="footer">
+            <p>Return to <a href="/">Main Menu</a></p>
+        </footer>
 
     </body>
 </html>
