--- a/data_entry/static/data_entry/result.css
+++ b/data_entry/static/data_entry/result.css
@@ -15,10 +15,10 @@ h1 {
 h2 {
     width: 400px;
     text-align: center;
-    font-size: small;
+    border-radius: 10px;
+    padding: 20px;
     color: blue;
     background-color: whitesmoke;
-    padding-left: 1px;
 } 
 
 .main{
