Message block implementatio

--- a/data_entry/templates/main.html
+++ b/data_entry/templates/main.html
@@ -14,7 +14,7 @@
 
     <h1>Celestial Navigation</h1>
     
-    <h2>Under development and not to be used for navigation!</h2>
+    <h2>{{msg}}</h2>
 
     <ul class="main">
         <li><a href="/meridian_passage_entry">Meridian Passage / Latitude</a></li>
