--- a/data_entry/templates/meridian_passage_entry.html
+++ b/data_entry/templates/meridian_passage_entry.html
@@ -15,6 +15,8 @@
 
         <h1>Meridian Passage Entry</h1>
 
+        <h2> {{msg}}</h2>
+
         <ul class="main">
            
             <form action="" method="POST">
