Removed hard coding of return to main, used url tag

--- a/data_entry/templates/sight_result.html
+++ b/data_entry/templates/sight_result.html
@@ -21,7 +21,7 @@
 
 
         <footer class="footer">
-            <p>Return to <a href="/">Main Menu</a></p>
+            <p>Return to <a href="{% url "main" %}">Main Menu</a></p>
         </footer>
 
     </body>
