--- a/data_entry/templates/latitude_entry.html
+++ b/data_entry/templates/latitude_entry.html
@@ -28,7 +28,7 @@
         </ul>
 
         <footer class="footer">
-            <p>Return to <a href="/">Main Menu</a></p>
+            <p>Return to <a href="{% url "main" %}">Main Menu</a></p>
         </footer>
 
     </body>
