--- a/data_entry/templates/star_finder_time_entry.html
+++ b/data_entry/templates/star_finder_time_entry.html
@@ -24,7 +24,7 @@
         </ul>
     
         <footer class="footer">
-            <p>Return to <a href="/">Main Menu</a></p>
+            <p>Return to <a href="{% url "main" %}">Main Menu</a></p>
         </footer>
 
     </body>
